Missed out a change when downgrading syntax from Java 11 to Java 8